src/assets/style/resume.scss
@import 'src/assets/style/variables.scss';
@import "_smui-theme.scss";

.jdev-route-resume {
  a {
    font-weight: bold;
    color: $mdc-theme-primary;
    text-decoration: none;

    &:hover {
      opacity: 0.75;
    }
  }

  .jdev-headline-underline {
    height: 1px;
    width: 100%;
    border-top: 1px solid #000;
    margin-bottom: $h2-margin;
  }

  h2 {
    text-align: center;
    margin-top: $h2-margin;
    margin-bottom: 0;
    transition: all 1s ease-in-out;
  }

  .jdev-resume-date {
    @media #{$breakpoint-mobile} {
      background-color: $mdc-theme-surface;
    }

    @media #{$breakpoint-tablet} {
      background-color: $mdc-theme-surface;
    }
  }

  .jdev-resume-content {
    @media #{$breakpoint-mobile} {
      margin-left: 10vw;
    }

    @media #{$breakpoint-tablet} {
      margin-left: 10vw;
    }
  }
}

